# oms-dispatcher

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/oms_dispatcher/: __init__.py  adapters.py  db.py  dispatcher.py  health.py  main.py  settings.py
tests/: conftest.py  test_dispatcher.py
