[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "oms-dispatcher"
version = "0.1.0"
description = "Phase 2.5 — polls oms_intents WHERE status='queued', POSTs to per-venue broker adapter, marks submitted/rejected. Idempotent via idempotency_key UNIQUE."
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "structlog>=24.1",
    "pydantic-settings>=2.3",
    "aiohttp>=3.9",
    "httpx>=0.27",
]

[project.scripts]
oms-dispatcher = "oms_dispatcher.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
